update qsTile and Widget

--- a/app/src/main/res/layout/one_click_widget.xml
+++ b/app/src/main/res/layout/one_click_widget.xml
@@ -13,12 +13,11 @@
         android:layout_alignParentTop = "true"
         android:orientation = "vertical">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/widget_fab"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_login"/>
-
+            android:text="Button" />
     </LinearLayout>
 
 </RelativeLayout>
