update qsTile and Widget

--- a/app/src/main/res/layout/one_click_widget.xml
+++ b/app/src/main/res/layout/one_click_widget.xml
@@ -11,13 +11,13 @@
         android:layout_alignParentLeft = "true"
         android:layout_alignParentStart	= "true"
         android:layout_alignParentTop = "true"
-        android:orientation = "vertical">
+        android:orientation = "horizontal">
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:id="@+id/widget_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Login  Logout" />
     </LinearLayout>
 
 </RelativeLayout>
