add viewmodel and database

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -5,6 +5,6 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.minosai.oneclick.ui.MainFragment"
+        android:name="com.minosai.oneclick.ui.fragment.MainFragment"
         android:label="MainFragment" />
 </navigation>
